--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 336_a2_test_venv/
 cs336-spring2024-assignment-2-submission.zip
 test_results.xml
+*.nsys-rep
+result.nsys-rep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
