--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,17 @@ dependencies = [
     "numpy",
     "pytest>=8",
     "regex>=2024.11.6",
-    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
-    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
     "tqdm>=4.67.1",
     "wandb>=0.19.7",
     "pandas>=2",
     "ty>=0.0.1a16",
+]
+
+[project.optional-dependencies]
+cuda = [
+    "torch==2.6.0+cu130",
+    "torchvision==0.21.0+cu130", 
+    "torchaudio==2.6.0+cu130",
 ]
 
 [build-system]
@@ -31,8 +36,15 @@ module-root = ""
 package = true
 python-preference = "managed"
 
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+
 [tool.uv.sources]
 cs336-basics = { path = "./cs336-basics", editable = true }  # Change this path to your assignment1-basics repo you want to use your own implementation!
+torch = { index = "pytorch-cu130" }
+torchvision = { index = "pytorch-cu130" }
+torchaudio = { index = "pytorch-cu130" }
 
 
 
